<?xml version="1.0"?>
<package format="2">
  <name>path_pkg</name>
  <version>0.0.0</version>
  <description>path_pkg</description>

  <maintainer email="asl@todo.todo">asl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
</package>
